Changelog
=========

2.0.4 (unreleased)
------------------

- Nothing changed yet.


2.0.3 (2014-08-29)
------------------

- Set reply-to to customer for shop-owner and supplier mails.
  [jone]

- Added Spanish translations.
  [Enny]

2.0.2 (2014-08-13)
------------------

- Fix variation-toplevel-group css. FF floats the table around the image.
  [mathias.leimgruber]


2.0.1 (2014-08-12)
------------------

- Fix payment processor lookup in checkout wizard.
  [mathias.leimgruber]

- Fix adapter lookups in vocabularies.
  [mathias.leimgruber]

- Fix get suppliers on shopitems with variations.
  [mathias.leimgruber]

- Implement getting supplier recursively.
  [mathias.leimgruber]


2.0 (2014-07-04)
----------------

- Updated README / Installation instructions.
  [lgraf]

- BugFix: It's possible to have users wihtout a fullname: For example
  SystemUsers / ldap users.
  [mathias.leimgruber]

- BugFix: If the fullname of a logged in user had umlauts the form was broken.
  :-)
  [mathias.leimgruber]

- Eliminate all uses of the IShopRoot interface.
  Instead we use the navigation root to register views that are supposed to be shop-global.
  This will make ftw.shop work with subsites that are supposed to have "their own shop".
  [lgraf]

- Rebuild logic behind manage_categories view:
  Don't search for categories to list downwards from shop root, but instead upwards
  from current context. This will only return contiguous shop category structures,
  and should therefore work nicely for setups with decentralized shop structures.
  [lgraf]


1.3.1 (2014-02-19)
------------------

- JS: Use POST method and explicitely disable caching for addtocart_ajax requests.
  [lgraf]

- Javascript: replace jq with jQuery / $ for Plone 4.3 compatibility.
  [jone]

- Make phone number in customer confirmation mail configurable and optional.
  [jone]

- Automatically set the shop root on the portal upon new installation. #15
  [jone]

- Update German translations.
  [jone]
